--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js"></script>  
+  <!-- <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfKGAEqAAAAADajF4hSeTmabZ1sdzl5p-b6biIv"></script> -->
+  
   
 </head>
 <body>
